fixed vertical alignment issue + minor php warnings

--- a/wp-content/themes/sage/fresh_components/styles/fresh-components.less
+++ b/wp-content/themes/sage/fresh_components/styles/fresh-components.less
@@ -114,8 +114,11 @@
 }
 
 /* Fix vertical alignment issues */
-.slick-list, .slick-track,
-.slider .slide, .slider .container {
+.slick-list, 
+.slick-track,
+.slider .slide, 
+.slider .container,
+.slider .slide-list {
 	height: 100%;
 }
 
